// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Panel /> should render correctly 1`] = `
.c0 {
  padding-right: 1rem;
  padding-left: 1rem;
  height: 100%;
  width: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #fff;
}

<Panel
  type="editor"
>
  <Block
    type="editor"
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  padding-right: 1rem;
  padding-left: 1rem;
  height: 100%;
  width: ",
              [Function],
              ";
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "Block",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="editor"
    >
      <div
        className="c0"
        type="editor"
      >
        <h1>
          one
        </h1>
        <p>
          two
        </p>
      </div>
    </StyledComponent>
  </Block>
</Panel>
`;

exports[`<Panel /> should render correctly 2`] = `
.c0 {
  padding-right: 1rem;
  padding-left: 1rem;
  height: 100%;
  width: 20%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #eee;
}

<Panel
  type="explorer"
>
  <Block
    type="explorer"
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "eUTzXa",
            "rules": Array [
              "
  padding-right: 1rem;
  padding-left: 1rem;
  height: 100%;
  width: ",
              [Function],
              ";
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "Block",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="explorer"
    >
      <div
        className="c0"
        type="explorer"
      >
        <h1>
          one
        </h1>
        <p>
          two
        </p>
      </div>
    </StyledComponent>
  </Block>
</Panel>
`;
